--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: sync transform repos CI
 # events but only for the master branch
 on:
   schedule:
-    - cron: '0 0 * * *'
-  # push:
-  #   branches: [ master ]
+    - cron: "0 0 * * *"
+  push:
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,4 +27,3 @@ jobs:
 
       - name: Exec the job
         run: node index.js ${{ secrets.ACCESS_TOKEN }}
-
